--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "imdb-api": "^3.1.2",
+    "firebase": "^4.13.1",
     "jquery": "^3.3.1",
+    "ng-file-upload": "^12.2.13",
     "node-sass": "^4.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
