--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^4.13.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "method-override": "^2.3.10",
     "moment": "^2.20.1",
     "ng-file-upload": "^12.2.13",
     "node-sass": "^4.9.0",
