--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "create-db": "node create-db.js",
     "sass": "node-sass client/sass/ -o client/css/",
     "lint": "eslint --color **/*.js --ignore-pattern node_modules/",
-    "dev": "rerun-script"
+    "dev": "rerun-script",
+    "start": "node server.js"
   },
+  "engines": {
+    "node": "8.9.1",
+    "npm": "5.5.1"
+  },  
   "watches": {
     "sass": [
       "client/sass/*.scss"
